# tempestsdrpython

./: .gitignore  README.md  pyproject.toml  requirements.txt
deploy/: README.md  agent.env  run-agent.sh  tempestsdr-agent.service  tempestsdr-server.service
examples/: demo.py
scripts/: scan.ps1
tempestsdr/: __init__.py  agent.py  cli.py  dsp.py  framerate.py  gui.py  processor.py  server.py  sync.py  synth.py  videomodes.py  webgui.py
tempestsdr/sources/: __init__.py  base.py  file_source.py  rtlsdr_source.py  soapy_source.py
tests/: test_agent.py  test_dsp.py  test_end_to_end.py  test_framerate.py  test_processor.py  test_server.py  test_sources.py  test_sync.py  test_videomodes.py  test_webgui.py
